--- a/pocketbase/Dockerfile
+++ b/pocketbase/Dockerfile
@@ -1,21 +1,22 @@
 FROM alpine:latest
 
-ARG PB_VERSION=0.18.7
+ARG PB_VERSION=0.22.6
 
 RUN apk add --no-cache \
     unzip \
-    # this is needed only if you want to use scp to copy later your pb_data locally
-    openssh
+    ca-certificates
 
-# copy PocketBase
-COPY ./pocketbase .
+# download and unzip PocketBase
+ADD https://github.com/pocketbase/pocketbase/releases/download/v${PB_VERSION}/pocketbase_${PB_VERSION}_linux_amd64.zip /tmp/pb.zip
+RUN unzip /tmp/pb.zip -d /pb/
 
-# set executable permissions for pocketbase
-RUN chmod +x /pocketbase
+# uncomment to copy the local pb_migrations dir into the image
+# COPY ./pb_migrations /pb/pb_migrations
+
+# uncomment to copy the local pb_hooks dir into the image
+# COPY ./pb_hooks /pb/pb_hooks
 
 EXPOSE 8080
 
-ENV PORT 8080
-
 # start PocketBase
-CMD ["/pocketbase", "serve", "--http=0.0.0.0:8080"]
+CMD ["/pb/pocketbase", "serve", "--http=0.0.0.0:8080"]
